--- a/package.json
+++ b/package.json
@@ -4,17 +4,24 @@
   "description": "An app that allows for actively fact-checked debate over American political subjects",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
+    "eslint": "^9.23.0",
+    "eslint-config-next": "^15.2.4",
     "express": "^4.21.2",
     "next": "^15.2.4",
     "pg": "^8.14.1",
     "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "sequelize": "^6.37.6",
     "webpack": "^5.98.0"
   }
