add: pg-hstore dependency for sequelize

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "An app that allows for actively fact-checked debate over American political subjects",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --watch",
+    "start": "nodemon ./src/server"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +21,7 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.14.1",
+    "pg-hstore": "^2.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.4.0",
