--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sequelize/postgres": "^7.0.0-alpha.46",
     "axios": "^1.8.4",
     "cors": "^2.8.5",
     "dayjs": "^1.11.13",
