--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "html-webpack-plugin": "^5.6.3",
     "nodemon": "^3.1.9",
     "postcss": "^8.5.3",
+    "postcss-loader": "^8.1.1",
     "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.17",
     "webpack": "^5.98.0",
