--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --watch",
-    "start": "nodemon ./src/server"
+    "build": "webpack --watch --mode production",
+    "start": "nodemon ./src/server",
+    "dev": "webpack serve --config webpack.config.js --mode development"
   },
   "keywords": [],
   "author": "",
@@ -43,6 +44,7 @@
     "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.17",
     "webpack": "^5.98.0",
-    "webpack-cli": "^6.0.1"
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.1"
   }
 }
