--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@sequelize/postgres": "^7.0.0-alpha.46",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "axios": "^1.8.4",
     "cors": "^2.8.5",
     "dayjs": "^1.11.13",
