--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "framer-motion": "^12.6.2",
     "lucide-react": "^0.484.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
