--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --watch --mode production",
     "start": "nodemon ./src/server",
-    "dev": "webpack serve --config webpack.config.js --mode development"
+    "dev": "webpack serve --config webpack.config.js --mode development",
+    "seedTopics": "node ./src/server/db/seeds/topics.js"
   },
   "keywords": [],
   "author": "",
