--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google/genai": "^0.7.0",
     "@sequelize/postgres": "^7.0.0-alpha.46",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "axios": "^1.8.4",
