--- a/.env_example
+++ b/.env_example
@@ -2,3 +2,5 @@ GOOGLE_CLIENT_ID=your_google_client_id
 GOOGLE_CLIENT_SECRET=your_google_client_secret
 DATABASE_URL=DATABASE_URL=postgres://postgres:sudo@localhost:5432/postgres
 SESSION_SECRET=super_secret_session_key
+GNEWS_API=
+GOOGLE_GEN_AI_KEY=
