--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --watch --mode production",
+    "build:dev": "webpack --watch --mode development",
     "start": "nodemon ./src/server",
     "dev": "webpack serve --config webpack.config.js --mode development",
     "seedTopics": "node ./src/server/db/seeds/topics.js"
